kubernetes/ingress/backend-canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-canary-ingress

  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"

spec:
  ingressClassName: nginx

  rules:
    - host: app.local

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend-v2-service

                port:
                  number: 80
